# PlantGrow

./: .gitignore  BUILD_GUI.md  CMakeLists.txt  GUI_README.md  README.md  build.sh  setup_gui.sh  test_phase3.py
configs/: aggressive_pruning.json  dense_tree_phase3.json  no_pruning_comparison.json  oak.json  oak_phase2.json  oak_phase3.json  photo_only.json  simple_pruning_test.json  simple_test.json
python/: tree_gen.py
python/tests/: test_phase1.py  test_phase2.py
src/: main.cpp
src/core/: branch.cpp  branch.h  config.cpp  config.h  lsystem.cpp  lsystem.h  resources.cpp  resources.h  tree.cpp  tree.h  tropism.cpp  tropism.h  types.h
src/export/: usd_exporter.cpp  usd_exporter.h
src/gui/: camera.cpp  camera.h  main_gui.cpp  renderer.cpp  renderer.h  viewer.cpp  viewer.h
